--- a/src/output.css
+++ b/src/output.css
@@ -8,7 +8,11 @@
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-orange-500: oklch(0.705 0.213 47.604);
+    --color-pink-400: oklch(0.718 0.202 349.761);
     --color-slate-200: oklch(0.929 0.013 255.508);
+    --color-slate-300: oklch(0.869 0.022 252.894);
+    --color-slate-700: oklch(0.372 0.044 257.287);
+    --color-slate-950: oklch(0.129 0.042 264.695);
     --color-gray-300: oklch(0.872 0.01 258.338);
     --color-zinc-900: oklch(0.21 0.006 285.885);
     --color-neutral-600: oklch(0.439 0 0);
@@ -239,8 +243,17 @@
   .sticky {
     position: sticky;
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
   }
   .isolate {
     isolation: isolate;
@@ -473,6 +486,9 @@
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
+  .h-full {
+    height: 100%;
+  }
   .h-screen {
     height: 100vh;
   }
@@ -506,15 +522,6 @@
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
-  .w-24 {
-    width: calc(var(--spacing) * 24);
-  }
-  .w-80 {
-    width: calc(var(--spacing) * 80);
-  }
-  .w-96 {
-    width: calc(var(--spacing) * 96);
-  }
   .w-full {
     width: 100%;
   }
@@ -529,12 +536,6 @@
   }
   .max-w-screen {
     max-width: 100vw;
-  }
-  .min-w-80 {
-    min-width: calc(var(--spacing) * 80);
-  }
-  .min-w-96 {
-    min-width: calc(var(--spacing) * 96);
   }
   .min-w-screen {
     min-width: 100vw;
@@ -1145,11 +1146,17 @@
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
+  .bg-neutral-600 {
+    background-color: var(--color-neutral-600);
+  }
   .bg-neutral-950 {
     background-color: var(--color-neutral-950);
   }
   .bg-orange-500 {
     background-color: var(--color-orange-500);
+  }
+  .bg-pink-400 {
+    background-color: var(--color-pink-400);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1163,6 +1170,15 @@
   .bg-slate-200 {
     background-color: var(--color-slate-200);
   }
+  .bg-slate-300 {
+    background-color: var(--color-slate-300);
+  }
+  .bg-slate-700 {
+    background-color: var(--color-slate-700);
+  }
+  .bg-slate-950 {
+    background-color: var(--color-slate-950);
+  }
   .-bg-conic {
     --tw-gradient-position: in oklab;
     background-image: conic-gradient(var(--tw-gradient-stops));
@@ -1174,6 +1190,9 @@
   .bg-radial {
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[radial-gradient\(circle_500px_at_50\%_200px\,\#3e3e3e\,transparent\)\] {
+    background-image: radial-gradient(circle 500px at 50% 200px,#3e3e3e,transparent);
   }
   .bg-\[radial-gradient\(ellipse_80\%_80\%_at_50\%_-20\%\,rgba\(120\,119\,198\,0\.3\)\,rgba\(255\,255\,255\,0\)\)\] {
     background-image: radial-gradient(ellipse 80% 80% at 50% -20%,rgba(120,119,198,0.3),rgba(255,255,255,0));
@@ -1343,9 +1362,6 @@
   }
   .p-9 {
     padding: calc(var(--spacing) * 9);
-  }
-  .p-32 {
-    padding: calc(var(--spacing) * 32);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -1951,11 +1967,6 @@
   .sm\:w-96 {
     @media (width >= 40rem) {
       width: calc(var(--spacing) * 96);
-    }
-  }
-  .lg\:p-32 {
-    @media (width >= 64rem) {
-      padding: calc(var(--spacing) * 32);
     }
   }
 }
